Update dummy personal page

--- a/index.html
+++ b/index.html
@@ -1,14 +1,48 @@
 <!DOCTYPE html>
 <html>
 
-<head></head>
+<head>
+    <title>My Lovely Page</title>
+    <link rel="icon" type="image/x-icon" href="./icons/favicon.ico" />
+    <meta name="description" content="This is my first page where I demonstrate HTML">
+    <meta charset="UTF8">
+</head>
 
 <body>
-    <h1>My first HTML page</h1>
+    <h1>My first HTML page 😆</h1>
+    <h3>Another Dummy Text</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore voluptas repudiandae voluptate corrupti numquam
         consectetur omnis autem error? Similique praesentium reprehenderit, a ut iusto, voluptas excepturi veritatis non
         amet sapiente, error distinctio! Minus vel vero optio necessitatibus temporibus quas rem quisquam unde, sequi
         dolorem aperiam laborum dicta ad hic at.</p>
+
+    <img src="https://picsum.photos/200" alt="A random image from picsum">
+
+    <hr />
+
+    <h4>Languages:</h4>
+    <ul type="circle">
+        <li>Azerbaijani</li>
+        <li>English</li>
+        <li>Turkish</li>
+        <li>Russian</li>
+        <li>German</li>
+        <li>Korean</li>
+    </ul>
+
+    <h4>Boiling an egg</h4>
+    <ol start="0">
+        <li>Take an egg out of the refrigerator</li>
+        <li>Pour some water into a pot</li>
+        <li>Put some salt in the water while it is boiling</li>
+        <li>Put the egg in</li>
+        <li>Wait for 5 min.s</li>
+        <li>Put the egg in some cold water</li>
+        <li>Peal and Eat the egg</li>
+    </ol>
+
+    <p>Visit my <a href="https://www.linkedin.com/in/nsadili/" target="_blank">LinkedIn page</a> for more info</p>
+
 </body>
 
 </html>
