Add more pages and content

--- a/index.html
+++ b/index.html
@@ -3,13 +3,25 @@
 
 <head>
     <title>My Lovely Page</title>
-    <link rel="icon" type="image/x-icon" href="./icons/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./assets/icons/favicon.ico" />
     <meta name="description" content="This is my first page where I demonstrate HTML">
     <meta charset="UTF8">
 </head>
 
 <body>
-    <h1>My first HTML page 😆</h1>
+
+    <table cellspacing="15" border="0">
+        <tr>
+            <td><img src="./assets/images/profile.png" width="170" alt="My Profile Picture"></td>
+            <td>
+                <h2>Nuraddin SADILI</h2>
+                <p>Email: nsadili@ada.edu.az</p>
+                <p>Phone: 055-555-55-55</p>
+                <p>Address: A.Aghaoghlu 61</p>
+            </td>
+        </tr>
+    </table>
+
     <h3>Another Dummy Text</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore voluptas repudiandae voluptate corrupti numquam
         consectetur omnis autem error? Similique praesentium reprehenderit, a ut iusto, voluptas excepturi veritatis non
@@ -17,6 +29,24 @@
         dolorem aperiam laborum dicta ad hic at.</p>
 
     <img src="https://picsum.photos/200" alt="A random image from picsum">
+
+    <hr />
+
+    <h3>My schedule</h3>
+    <table border="3" bgcolor="#ADD8E6">
+        <tr>
+            <th>Course</th>
+            <th>Time</th>
+        </tr>
+        <tr>
+            <td>Web and Mobile 1</td>
+            <td>Tue, Thu, 8:30-9:45</td>
+        </tr>
+        <tr>
+            <td>Database Systems</td>
+            <td>Mon, Wed 13:00-14:15</td>
+        </tr>
+    </table>
 
     <hr />
 
@@ -29,6 +59,8 @@
         <li>German</li>
         <li>Korean</li>
     </ul>
+
+    <hr />
 
     <h4>Boiling an egg</h4>
     <ol start="0">
@@ -43,6 +75,7 @@
 
     <p>Visit my <a href="https://www.linkedin.com/in/nsadili/" target="_blank">LinkedIn page</a> for more info</p>
 
+    <a href="./public/about.html">About me</a>
 </body>
 
 </html>
